# AdaptiveSampling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindGLFW.cmake
colormaps/: 0.tf  1.tf  2.tf  3-wave-muted.xml  3.tf  4.tf  4Wmed8.xml  CreateHistograms.bat  CreateTFs.bat  Guideline.txt  training-volumes-intervals.json
inference-gui/: CMakeLists.txt  adaptive_model.cpp  adaptive_model.h  camera_gui.cpp  camera_gui.h  hsv_normalization.cpp  hsv_normalization.h  importance_sampling_model.cpp  importance_sampling_model.h  main.cpp  stepsize_model.cpp  stepsize_model.h  superres_model.cpp  superres_model.h  tf_editor.cpp  tf_editor.h  visualizer.cpp  visualizer.h  visualizer_commons.h  visualizer_kernels.cu  visualizer_kernels.h
inference-gui/resources/: rgb2hsv.pt
network/: CMakeLists.txt  Network.pyproj  mainCheckpointToScript.py  mainConvertRawToBinary.py  mainDvrTrainingDense.py  mainImageStatistics.py  mainTrainingAdaptive.py  mainTrainingDense.py  mainTrainingImportance.py  mainTrainingSparse.py  mainTrainingStepsize.py  requirements.txt
network/dataset/: __init__.py  adaptiveDatasetLoader.py  datasetUtils.py  denseDatasetLoaderHDF5_v2.py  mainGroundTruthDatasetGenerator.py  mainGroundTruthDatasetViewer.py  mainStepsizeDatasetGenerator.py  mainTestSparseDatasetLoader.py  stepsizeDatasetLoader.py
network/importance/: __init__.py  adaptiveSmoothing.py  adaptiveStepsizeRendering.py  fractionalInpainting.py  gaussianMap.py  gradientMap.py  importanceMap.py  luminanceMap.py  networkMap.py  pdeInpainting.py  uniformMap.py
network/inference/: __init__.py  camera.py  renderSettings.py
network/losses/: __init__.py  lossbuilder.py  lossnet.py  lossnet_sparse.py  lossnet_unshaded.py  makelayers.py
network/losses/lpips/: __init__.py  dist_model.py  networks_basic.py
network/models/: __init__.py  deepfovea.py  enhancenet.py  mainTestUNet.py  partialconv2d.py  rcan.py  subpixelnet.py  tecogan.py  unet.py  videotools.py
network/sampling/: __init__.py  example_density.py  export_pattern.py  halton.py  lbg.py  lloyd.py  main.py  mainSamplesToImage.py  mainSamplingToHDF5.py  plastic.py  regular.py  sampling.py  uniform.py  voronoi.py
network/statistics/: __init__.py  mainAdaptiveDvrStats.py  mainAdaptiveIsoStats.py  mainDenseIsoStats.py  mainDvrBenchmarks.py  mainHeatmapComparison.py  mainHistogramComparison.py  mainIsoBenchmarks.py  mainNetComparisons.py  mainPatternComparison.py  statsLoader.py
network/tests/: FastInpainting.ipynb  FastInpaintingCUDA.py  RendererTest.ipynb  SigmoidOptimization.ipynb  TestAdjointAdaptiveSmoothing.ipynb  TestAdjointFastFractionalInpainting.py  hsv2rgb.pt  hsvToScript.py
network/utils/: __init__.py  apply_sn.py  binary_search.py  colorConversion.py  fixed_dict.py  histogram_equalization.py  histogram_generator.py  initial_image.py  mainGenerateTestVolumes.py  mainImageLenses.py  mainImportanceToDense.py  mv.py  psnr.py  root_finding.py  shading.py  tf_generator.py  tf_generator_v2.py  tfe.py  tools.py
renderer/: CMakeLists.txt  GPURendererDirect.cpp  camera.cpp  camera.h  commons.h  halton_sampler.h  inpainting.h  inpainting_fast.cu  inpainting_pde.cu  jit.cpp  lib.h  lib_cpu.cpp  lib_cuda.cu  mesh_drawer.cu  mesh_drawer.h  regular_interp1d.cu  regular_interp1d.h  render_kernel.cu  renderer.cu  renderer.h  sampling.cu  sampling.h  settings.cpp  settings.h  tf_texture_1d.cpp  tf_texture_1d.cu  tf_texture_1d.h  volume.cpp  volume.cu  volume.h
